# obj4dviewer

./: .coveragerc  LICENSE  README.md  camera.py  main.py  matrix_functions.py  object.py  object_3d.py  projection.py  pyproject.toml  render.py  requirements-dev.txt
.github/workflows/: coverage.yaml  python-package.yml  unit-tests.yml
references/: 4D Frustrum.excalidraw  Four-Space Visualization of 4D Objects - Index.mhtml
resources/: axis_hint.obj4  tesseract.obj4
src/obj4drender/: camera.py  object.py  projection.py  render.py
src/obj4dviewer/: camera.py  camera_controller.py  camera_view_setting.py  camera_view_settings.py  geoalg.py  matrix_functions.py  model_file_handler.py  mouse_event_subj_obs.py  object.py  projection.py  render.py  render_settings.py  scene.py  screen_setting.py  screen_settings.py  subject_observer.py
tests/: test_camera.py  test_camera_controller.py  test_camera_view_setting.py  test_geoalg.py  test_matrix_functions.py  test_model_file_handler.py  test_mouse_event_subj_obs.py  test_object.py  test_projection.py  test_render.py  test_render_settings.py  test_scene.py
